[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiosky"
version = "0.2.0"
description = "AI Governance Control Plane -- Policy enforcement and audit for regulated AI deployments"
authors = [{name = "Harfas", email = "harfas@axiosky.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.urls]
Homepage = "https://axiosky.com"
Repository = "https://github.com/axiosky/governance-api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
